# libgeier

./: .cvsignore  .gitignore  AUTHORS  COPYING.OpenSSL_exception  Makefile.am  README  README.dsig  THANKS  acinclude.m4  autogen.sh  configure.ac  geier.1  libgeier.pc.in  libgeier.spec.in  reconf.sh
config/: .cvsignore  Makefile.am
debian/: .cvsignore  Makefile.am  changelog  control  copyright  geier.install  libgeier-dev.install  libgeier.install  libgeier0.install  rules
doc/: autobook-notes.txt
doc/reference/: .cvsignore  Makefile.am  geier-docs.sgml  geier-sections.txt
doc/reference/html/: .cvsignore
doc/reference/xml/: .cvsignore
etc/: Elster2Cry.b64.cer  Makefile.am  xmlsec.tmpl
etc/schemas/: Makefile.am  allg000007.xsd  elster0810_LStA_200401_extern.xsd  elster0810_LStA_200501_extern.xsd  elster0810_LStA_200601_extern.xsd  elster0810_LStA_200701_extern.xsd  elster0810_LStA_200801_extern.xsd  elster0810_LStA_200901_extern.xsd  elster0810_LStA_201001_extern.xsd  elster0810_LStA_201101_extern.xsd  elster0810_UStA_200401_extern.xsd  elster0810_UStA_200501_extern.xsd  elster0810_UStA_200601_extern.xsd  elster0810_UStA_200701_extern.xsd  elster0810_UStA_200801_extern.xsd  elster0810_UStA_200901_extern.xsd  elster0810_UStA_201001_extern.xsd  elster0810_UStA_201101_extern.xsd  elster_LStA_200401_extern.xsd  elster_LStA_200501_extern.xsd  elster_LStA_200601_extern.xsd  elster_LStA_200701_extern.xsd  elster_LStA_200801_extern.xsd  elster_UStA_200401_extern.xsd  elster_UStA_200501_Nutzdaten.xsd  elster_UStA_200501_extern.xsd  elster_UStA_200601_extern.xsd  elster_UStA_200701_extern.xsd  elster_UStA_200801_extern.xsd  headerbasis000002.xsd  kontoabfrage.xsd  kontoabfrage_rootish.xsd  lsta_200401.xsd  lsta_200501.xsd  lsta_200601.xsd  lsta_200701.xsd  lsta_200801.xsd  lsta_200901.xsd  lsta_201001.xsd  lsta_201101.xsd  (+14 more)
etc/stylesheets/: Makefile.am  elsteranmeldung.xsl  elsterbasis.xsl  geldbetraege.xsl  lsta.xsl  steuernummer.xsl  ustva.xsl
guile/: .cvsignore  Makefile.am  libgeier.i
include/: .cvsignore  Makefile.am  geier-dsig.h  geier.h  geierversion.h.in
perl/: .cvsignore  Geier.pm  Geier.pod  Geier.xs  LICENSE  MANIFEST  Makefile.PL  README  geier-test.pl  simple-ustva.pl  typemap
perl/Geier/: Simple.pm
perl/Geier/Simple/: UStVA.pm
perl/debian/: .cvsignore  changelog  control  copyright  rules
python/: .cvsignore  Makefile.am  geier-Context.py.i  geier-swig.py  gen-ignores.awk  gen-ignores.sh  libgeier.i
src/: .cvsignore  Makefile.am  asn1hack.c  asn1hack.h  base64.c  base64.h  bsd-base64.c  bsd-base64.h  chunk_from_file.c  chunk_from_file.h  context.c  context.h  decrypt.c  dsig-get-attr.c  dsig-get-cert-text.c  dsig-get-cert.c  dsig-get-key.c  dsig-open.c  dsig-rewrite-datenlieferant.c  dsig-rewrite-vorgang.c  dsig-sign.c  dsig-slot.c  dsig.c  dsig.h  encoder.c  encoder.h  encrypt.c  exit.c  find_node.c  find_node.h  geier.c  get_clearing_error.c  globals.c  globals.h  gzip_deflate.c  gzip_deflate.h  gzip_inflate.c  gzip_inflate.h  init.c  iso_to_utf8.c  (+23 more)
src/nss/: .cvsignore  Makefile.am  dsig-get-cert.c  dsig-open.c  dsig-sign.c  dsig-slot.c  dsig.h  pkcs7_decrypt.c  pkcs7_encrypt.c  pkcs7_keying.c  pkcs7_keying.h
src/openssl/: .cvsignore  Makefile.am  asn1hack.c  asn1hack.h  dsig-get-attr.c  dsig-get-cert-text.c  dsig-get-cert.c  dsig-get-key.c  dsig-open.c  dsig-sign.c  dsig.h  pkcs7_decrypt.c  pkcs7_encrypt.c
tests/: .cvsignore  Makefile.am  README  test_base64.c  test_decrypt.c  test_dsig_digestvalue  test_dsig_send_text  test_encrypt.c  test_gzip_deflate.c  test_gzip_inflate.c  test_pkcs7_decrypt.c  test_pkcs7_encrypt.c  test_send.c  test_send_encrypted_text.c  test_send_text  test_send_text.c  test_validate  test_validate.c
tests/data/: .cvsignore  README  session_key  session_key.hex  test_ustva_encrypted.xml  test_ustva_reply.xml  test_ustva_reply_encrypted.xml  test_ustva_signed_reply.xml  test_ustva_unencrypted.xml  test_ustva_unencrypted_dsigvalue.b64  user.crt  user.key
tests/data/pkcs7/: README  certificate  private_key  private_key.base64  teststring  teststring.gzip  teststring.gzip.base64  teststring.gzip.pkcs7  teststring.gzip.pkcs7-encrypted  teststring.gzip.pkcs7-encrypted.base64  teststring.pkcs7-encrypted  teststring.pkcs7-envelope  teststring.pkcs7-envelope.base64  teststring.pkcs7-envelope.geier
