schemadir = $(datadir)/libgeier/schemas
schema_DATA = \
	allg000007.xsd \
	elster_LStA_200401_extern.xsd \
	elster_LStA_200501_extern.xsd \
	elster_LStA_200601_extern.xsd \
	elster_LStA_200701_extern.xsd \
	elster_LStA_200801_extern.xsd \
	elster_UStA_200401_extern.xsd \
	elster_UStA_200501_extern.xsd \
	elster_UStA_200601_extern.xsd \
	elster_UStA_200701_extern.xsd \
	elster_UStA_200801_extern.xsd \
	elster0810_LStA_200401_extern.xsd \
	elster0810_LStA_200501_extern.xsd \
	elster0810_LStA_200601_extern.xsd \
	elster0810_LStA_200701_extern.xsd \
	elster0810_LStA_200801_extern.xsd \
	elster0810_UStA_200401_extern.xsd \
	elster0810_UStA_200501_extern.xsd \
	elster0810_UStA_200601_extern.xsd \
	elster0810_UStA_200701_extern.xsd \
	elster0810_UStA_200801_extern.xsd \
	kontoabfrage.xsd \
	kontoabfrage_rootish.xsd \
	lsta_200401.xsd \
	lsta_200501.xsd \
	lsta_200601.xsd \
	lsta_200701.xsd \
	lsta_200801.xsd \
	ndh000009.xsd \
	registrierung.xsd \
	registrierung_rootish.xsd \
	th000007_extern.xsd \
	usta_200401.xsd \
	usta_200501.xsd \
	usta_200601.xsd \
	usta_200701.xsd \
	usta_200801.xsd

EXTRA_DIST = $(schema_DATA)
