schemadir = $(datadir)/libgeier/schemas
schema_DATA = \
	elster0810_LStA_200401_extern.xsd \
	elster0810_LStA_200501_extern.xsd \
	elster0810_LStA_200601_extern.xsd \
	elster0810_LStA_200701_extern.xsd \
	elster0810_LStA_200801_extern.xsd \
	elster0810_LStA_200901_extern.xsd \
	elster0810_LStA_201001_extern.xsd \
	elster0810_LStA_201101_extern.xsd \
	elster0810_UStA_200401_extern.xsd \
	elster0810_UStA_200501_extern.xsd \
	elster0810_UStA_200601_extern.xsd \
	elster0810_UStA_200701_extern.xsd \
	elster0810_UStA_200801_extern.xsd \
	elster0810_UStA_200901_extern.xsd \
	elster0810_UStA_201001_extern.xsd \
	elster0810_UStA_201101_extern.xsd \
	headerbasis000002.xsd \
	kontoabfrage.xsd \
	kontoabfrage_rootish.xsd \
	lsta_200401.xsd \
	lsta_200501.xsd \
	lsta_200601.xsd \
	lsta_200701.xsd \
	lsta_200801.xsd \
	lsta_200901.xsd \
	lsta_201001.xsd \
	lsta_201101.xsd \
	ndh000010_extern.xsd \
	registrierung.xsd \
	registrierung_rootish.xsd \
	th000008_extern.xsd \
	usta_200401.xsd \
	usta_200501.xsd \
	usta_200601.xsd \
	usta_200701.xsd \
	usta_200801.xsd \
	usta_200901.xsd \
	usta_201001.xsd \
	usta_201101.xsd

EXTRA_DIST = $(schema_DATA)
